--- a/src/styles/scss/_map.scss
+++ b/src/styles/scss/_map.scss
@@ -35,3 +35,16 @@
 .gm-style-cc {
 	display: none;
 }
+
+.searchInput {
+	box-sizing: border-box;
+	border: 1px solid transparent;
+	margin: 1em 2em 0 -1em;
+	padding: .2em;
+	width: 100%;
+	border-radius: 3px;
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+	font-size: 1.2em;
+	outline: none;
+	text-overflow: ellipses;					
+}
